# l2a-triagent

./: .gitignore  NEXT.md  README.md  config.toml  pyproject.toml  render.yaml
solve_engine/: config.py  models.py
solve_engine/agent/: graph.py  run.py  setup.py
solve_engine/board/: __init__.py  app.py
solve_engine/db/: __init__.py  connection.py  migrate.py
solve_engine/db/migrations/: 0001_init.sql
solve_engine/eval/: __init__.py  golden.jsonl  golden.py  run_eval.py
solve_engine/ingest/: cache.py  fetch.py  github_client.py  normalize.py  query.py  ratelimit.py  run.py  store.py
solve_engine/score/: run.py  store.py
tests/: test_agent.py  test_api.py  test_classify_parser.py  test_config.py  test_eval.py  test_ingest_assembly.py  test_ingest_client.py  test_ingest_query.py  test_ingest_ratelimit.py  test_models.py  test_normalize.py  test_score_run.py  test_smoke.py
tests/fixtures/: raw_normalize.json  repo_items.json  search_items.json
triagent/: models.py
triagent/agent/: __init__.py  graph.py  run.py  setup.py
triagent/api/: app.py
triagent/board/: app.py
triagent/classify/: __init__.py  classifier.py  llm.py
triagent/db/: connection.py  migrate.py  queries.py
triagent/db/migrations/: 0001_init.sql
triagent/eval/: golden.jsonl  run_eval.py
triagent/ingest/: __init__.py  fetch.py  github_client.py  normalize.py  query.py  run.py  store.py
triagent/score/: __init__.py  run.py  store.py
triagent/web/: app.js  index.html  style.css
