[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solve-engine"
version = "0.0.1"
description = "Ticket-triage trainer over live GitHub issues."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "psycopg[binary]>=3",
    "python-dotenv",
    "httpx",
    "streamlit",
    "langchain-google-genai",
    "langgraph==1.2.6",
    "langgraph-checkpoint-postgres==3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]
# Evaluation harness deps (sklearn metrics). Kept out of the default runtime so
# the core pipeline stays lean; install with `uv pip install -e ".[dev,eval]"`.
eval = [
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["solve_engine"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

# Third-party UI libraries that ship no type stubs. This only tells mypy these
# external packages are untyped; it does not relax strictness on our own code.
[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
